<resources>
    <string name="app_name">Defense Job Preparation</string>
    <string name="Navy">Navy</string>
    <string name="armytext">The soldier is the Army. No army is better than its soldiers. \nThis is beta app. We will update info very soon.</string>
    <string name="history">History</string>
    <string name="historydescriptionarmy">Early History \n
On the 15th February 1948, the East Bengal Regiment was raised at Kurmitola, Dhaka under the prudent leadership of late Major Mohammad Abdul Gani. Until the Great Liberation War of 1971 there were 8 battalions of the East Bengal Regiment with their remarkable achievements. On night 25 March 1971 Pakistan Army brutally killed hundreds of thousands of innocent Bangali civilians and uniformed personnel. As a result, Bengali soldiers in East Pakistan (Bangladesh) revolted and initiated the liberation war of Bangladesh in March 1971. In a cabinet meeting of the provisional government of Bangladesh held on 11 July 1971, liberation war was structured through dividing the Bangladesh into 11 sectors and organizing Bangladeshi regular forces more on strategy of small group guerrilla actions. Later three regular Infantry Brigades S, K and Z Force were raised to fight conventional battles. \n


Post 1971: The Emergence of the Bangladesh Army \n
In post liberation war era, three regular Infantry Brigades S, K and Z Forces formed the nucleus of Bangladesh Army. All arms and services underwent tremendous reformation. To meet the growing need of time, new units, brigades and divisions were raised. Centers and schools of various Arms and Services were also raised with the time for strengthening the training and administrative capabilities. Every corps can proudly claim to have an institution of their own where officers and men are trained in their respective arms/services/trades. \n


Subsequent Reform and Development of Bangladesh Army\n
Bangladesh Army went through the process of expansion and modernization in all respects with the passage of time. Recently Government has adopted long terms expansion and modernization plan of the army under ‘Forces Goal 2030’. In the process, two Infantry Division Headquarter and a Composite Brigade Headquarters have been raised. Moreover, massive organizational transformation has been carried out in many military outfits. Modern weapons and equipments like Main Battle Tank-2000, Radar Controlled Self Propelled Gun, FM-90 and Weapon Locating Radar etc have also been incorporated. Infrastructural development works and different welfare measures have been taken to upgrade operational efficiency in Army.</string>
    <string name="historydescriptionbaf">The origin of Bangladesh Air Force (BAF) dates back to 1920 in British India when the Indian politicians demanded for inclusion of local people in the Royal Air Force because some members of Indian Royal Flying Core had earned name and fame in the 1st World War. The demand eventually got its shape in 1932 when Indian Air Force came into being on 08 October of that year. But until 1939 the Royal Air force hardly made any progress. Even during the 2nd World War period there was hardly any scope for training in the Bangladesh portion of the then sub-continent. However, airports were constructed in Comilla, Feni, Patenga, Cox’s Bazar and in few other places hastily. The only recruiting centre for this area was in Narayangonj.

During 1951-52 the first fighter squadron of Pakistan was organized anew. It was commanded by Abdur Rahim Khan who became the Chief of Air Staff of Pakistan Air Force during 1969-71. Bengali PAF/AF officer Flight Lieutenant Towab was the Flight Commander of that squadron who later became Chief of Air Staff of independent Bangladesh in 1975. Of the Bengali pilots Flying Officer Alam died in plane crash in 1956. He Left behind his contemporary Flying Officer A K Khandker who later played a glorious role in our historic Liberation War. He was not only the Deputy Commander of the Bangladesh side in the Liberation War; he also represented Bangladesh side during the surrender of the occupation Force at Race Course Maidan (Now Suhrawardy Uddan) on 16 December 1971. It is worth mentioning that A K Khandker became the first Chief of Air Staff of Bangladesh Air Force (BAF).

From 1947 to 1971 the Bengali nation had to struggle through the lives of myriad of people. The Bengali officers of the then Pakistan Air Force (PAF) had their name and sacrifice as well. Even during the Indo-Pak War in 1965, there were many glories of victory achieved by Shaheed (martyr) Squadron Leader Alam, Wing Commander Towab, Flight Lieutenant Saiful Azam and many others of them Flight lieutenant ( later on Group Captain) Saiful Azam became an ace fighter pilot. He showed success in three different countries in dog fight during real war. He became the only fighter pilot in the world who was awarded with state title by three different countries viz, Pakistan (Sitara-e-Jurat), Jordan (Hossam-e-Istiqlal) and Iraq (North S Suja). He proved his worthwhileness to such an extent that he was allowed to command a fighter squadron of Pakistan Air Force as a Flight Lieutenant which was supposed to be commanded by a Wing Commander. These officers had some praiseworthy airmen. One of them was Shaheed (martyr) Sergeant Zahurul Haque. He was a Ground Combat Instructor (GCI), a trade well known for conducting drill. Even such an airman had concern for his motherland. He was an accused in historic ‘Agartala Conspiracy Case’, obviously a historic plot to liberate the country. He succumbed to his injuries following constant torture on 15 February 1969. Bangladesh Air Force has recognized the contribution of this great airman since an important base of BAF (BAF Base Zahurul Haque) has been named in his name. Even the recognition has crossed the purview of BAF since a dormitory of Dhaka University has also been named after him.

The glorious Liberation War took place in 1971. From the motivated drive of patristic zeal, a good number of Bengali officers and airmen including technicians renounced their previous services and joined the Liberation War to expedite victory. It was largely possible due to the sincerity of those members who established the Air Wing of the Liberation War on 28 September 1971 at Dimapur of Nagaland, India. The air wing possessed a scanty inventory of one DC-3 airplane, one Otter airplane and one Alluette helicopter. The patriotic pilots and technicians of the nascent Bangladesh Air Force formed a flying unit named, ‘Kilo Flight’ , under the able guidance of the then Squadron Leader Sultan Mahmud who later became Air Vice Marshal and Chief of Air Staff. However, the pilots of the historic ‘Kilo Flight’ made successful sorties to launch successful air attacks on a number of targets in Chittagong and Narayangonj. It was during the Liberation War that another great son of the soil, Flight Lieutenant Matiur Rahman sacrificed his life for his motherland. His sacrifice was not an ordinary one since it is difficult for a family man to endanger his life. It was not a fluke either. He not only sacrificed his life, but the happiness of his family life as well. While fleeing Pakistan with a T-33 aircraft to join the glorious Liberation War, he died at Thatta, a few kilometers away from the Indian border where his aircraft crashed. The heroic attempt has been rewarded by both BAF and the nation as well. The most important officers’ training base of BAF in Jessore has been named after him (BAF Base Matiur Rahman) and the nation has awarded him the highest state title, ‘Beershrestha’ Besides these great personalities, out of many, two more officers of BAF are worth mentioning, the two sector commanders. They are the then Squadron Leader Khademul Bashar who later became Air Vice Marshal and Chief of Air Staff and another officer is the then Squadron Leader Hamidullah who later became Wing Commander.

Since independence, BAF underwent massive modification and expansion. Concentration has been given on both air power and air defense. Bases, Units and outposts have been established at different suitable places. As a mark of improvement, many foreign trainees both at officers and airmen levels underwent training in BAF. As a mark of recognition, Bangladesh Air Force (BAF) received ‘National Colours’ in 1980 by the then honorable President of the People’s Republic of Bangladesh. Later Bangladesh Air Force Academy (BAFA) received ‘National colours’ in 2003 by the then honorable Prime Minister of the People’s Republic of Bangladesh. Even the Recruits’ Training School (RTS) has been awarded with ‘BAF Colours’ by an ex Chief of Air Staff in 2004.

In aid to civil power, BAF always responded in the best possible way. Bangladesh Air Force performed tremendously during deluge like flood in 1988 and after a devastating cyclonic storm in Chittagong in 1991. It performed election duties quite successfully in 2001 Parliamentary Election. The organization also responded well in international requirements like after earthquake in Gujrat, India in 2001; after Tsunami in Sri Lanka and the Maldives in 2004 and after earthquake in Mujaffarabad, Pakistan in 2005. It has responded to the call of United Nations by serving under its umbrella in 17 different war-torn countries of the world.</string>
    <string name="historydescriptionnavy">Introduction \n 1. With the passage of time Bangladesh and her Navy have grown 48 years old. Today, Bangladesh Navy has more than 80 ships and craft in its inventory. With the pace of development it has acquired three dimensional capabilities. The build-up of Bangladesh Navy, which began after independence has come through the end of sectarian exploitation of the land and resource in time and history. </string>
    <string name="armycareer">See the large variety of careers and jobs the Army offers; just choose a category that best matches your interests. \n \nOfficer:</string>
    <string name="defense_job">Defense Job</string>
    <string name="defense_job_preparation">Defense Job Preparation</string>
    <string name="army">Army</string>
    <string name="air_force">Air Force</string>
    <string name="info">Info</string>
    <string name="quets">“If a man hasn’t discovered something that he will die for, he isn’t fit to live.” – Martin Luther King Jr.</string>
</resources>
