<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        >
            <ImageView
                android:padding="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logonew">

            </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/white_rec"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="btnArmy"
            >
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logoarmy">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/army"
                android:textAlignment="center"
                android:textSize="20sp"

                android:textStyle="bold"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/white_rec"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="btnAir"
            >
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logoair">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_force"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                >

            </TextView>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginRight="24dp"

        android:layout_marginLeft="24dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/white_rec"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="btnNavy"
            >
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logonavy">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Navy"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                >

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/white_rec"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="btnPreparation"
            >
            <ImageView
                android:padding="10dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/news">
            </ImageView>
                android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                >

            </TextView>

        </LinearLayout>



</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rec"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="25dp"
        android:text="@string/quets">

    </TextView>


</LinearLayout>